--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "next": "14.2.3",
     "react": "^19.0.0-beta-1beb73de0f-20240503",
     "react-dom": "^19.0.0-beta-1beb73de0f-20240503",
+    "stripe": "^15.5.0",
     "zod": "^3.23.0-beta.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.7.3",
     "@pandacss/dev": "^0.39.0",
     "@types/node": "^20.12.9",
     "@types/react": "^18.3.1",
